<resources>
    <string name="app_name">Weather</string>
    <string name="c">°C</string>
    <string name="_5_km_h">5 km/h</string>
    <string name="_1000_pa">1000 hPa</string>
    <string name="_70">70 %</string>
    <string name="_10_km">10 km</string>
    <string name="temp">30°</string>
    <string name="cloudy">Cloudy</string>
    <string name="search_city">Search city....</string>
    <string name="city_placeholder">City</string>
    <string name="weather_notification_channel_name">Weather updates</string>
    <string name="weather_notification_channel_description">Shows current weather in the status bar</string>
    <string name="tooltip_wind_speed">Wind speed in km/h</string>
    <string name="tooltip_humidity">Relative humidity, percent</string>
    <string name="tooltip_visibility">Visibility distance, km</string>
    <string name="tooltip_pressure">Atmospheric pressure, hPa</string>
    <string name="map_confirm">Use this location</string>
    <string name="map_instructions">Tap on the map to choose a location</string>
    <string name="map_selection_label">Selected: %1$s</string>
    <string name="map_no_selection">No location selected</string>
    <string name="map_marker_title">Chosen location</string>
    <string name="map_selection_fallback">%1$.4f, %2$.4f</string>
</resources>
