<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/main_bg"
        tools:context=".MainActivity">

    <EditText
            android:id="@+id/search"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_margin="8dp"
            android:background="@drawable/search_bg"
            android:drawableStart="@drawable/ic_baseline_search_24"
            android:drawableLeft="@drawable/ic_baseline_search_24"
            android:drawablePadding="10dp"
            android:paddingHorizontal="10dp"
            android:cursorVisible="true"
            android:textCursorDrawable="@color/white"
            android:hint="@string/search_city"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:autofillHints="name"
            android:inputType="textCapWords"
            android:imeOptions="actionDone"
            tools:ignore="LabelFor"
            android:fontFamily="@font/roboto_condensed_regular" />

    <TextView
            android:id="@+id/city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:drawableStart="@drawable/ic_baseline_location_on_24"
            android:drawableLeft="@drawable/ic_baseline_location_on_24"
            android:drawablePadding="5dp"
            android:fontFamily="@font/roboto_condensed_regular"
            android:textColor="@color/white"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/search"
            app:layout_constraintVertical_bias="0.009"
            tools:ignore="RtlCompat,RtlHardcoded,RtlSymmetry,UseCompatTextViewDrawableXml" />

    <TextView
            android:id="@+id/tempMain"
            android:layout_width="393dp"
            android:layout_height="310dp"
            android:fontFamily="@font/roboto_condensed_regular"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:text="@string/_20"
            android:textSize="200sp"
            android:textStyle="bold"
            tools:ignore="RtlCompat"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="245dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="402dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.695" />

    <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/description"
            android:fontFamily="@font/roboto_condensed_regular"
            android:gravity="center"
            android:paddingHorizontal="15dp"
            android:text="@string/cloudy"
            android:textAlignment="center"
            android:textColor="#11103a"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tempMain"
            app:layout_constraintVertical_bias="0.054" />

    <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description"
            app:layout_constraintVertical_bias="0.178"
            tools:ignore="UselessLeaf">

        <TextView
                android:id="@+id/windSpeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0"
                android:drawableStart="@drawable/ic_wind"
                android:drawableLeft="@drawable/ic_wind"
                android:drawablePadding="5dp"
                android:fontFamily="@font/roboto_condensed_regular"
                android:gravity="center"
                android:paddingHorizontal="10dp"
                android:text="@string/_5_km_h"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:ignore="RtlCompat,UseCompatTextViewDrawableXml" />

        <TextView
                android:id="@+id/humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0"
                android:drawableStart="@drawable/ic_humidity"
                android:drawableLeft="@drawable/ic_humidity"
                android:drawablePadding="5dp"
                android:fontFamily="@font/roboto_condensed_regular"
                android:gravity="center"
                android:paddingHorizontal="10dp"
                android:text="@string/_70"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:ignore="RtlCompact,UseCompatTextViewDrawableXml" />

        <TextView
                android:id="@+id/visibility"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0"
                android:drawableStart="@drawable/ic_visibility"
                android:drawableLeft="@drawable/ic_visibility"
                android:drawablePadding="5dp"
                android:fontFamily="@font/roboto_condensed_regular"
                android:gravity="center"
                android:paddingHorizontal="10dp"
                android:text="@string/_10_km"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:ignore="RtlCompat,UseCompatTextViewDrawableXml" />

        <TextView
                android:id="@+id/pressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0"
                android:drawableStart="@drawable/ic_pressure"
                android:drawableLeft="@drawable/ic_pressure"
                android:drawablePadding="4dp"
                android:fontFamily="@font/roboto_condensed_regular"
                android:gravity="center"
                android:paddingHorizontal="10dp"
                android:text="@string/_1000_pa"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:ignore="RtlCompat,UseCompatTextViewDrawableXml" />
    </LinearLayout>

    <TextView
            android:id="@+id/degree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_condensed_regular"
            android:text="@string/c"
            android:textColor="#FFE700"
            android:textSize="50sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="186dp"
            android:layout_marginEnd="47dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="478dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="318dp" />

</androidx.constraintlayout.widget.ConstraintLayout>